--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <img class="stikerTolak sembunyi" src="./cubit.gif"/>
                 <p class="teksTolak sembunyi">Please don’t be mad at me 🥺</p>
 
-                <img class="stikerTolak sembunyi" src="./weee.gif"/>
+                <img class="stikerTolak sembunyi" src="./bear-hug.gif"/>
                 <p class="teksTolak sembunyi">I wanna give you a big hug 🥰</p>
 
                 <img class="stikerTolak sembunyi" src="./cubit.gif"/>
