--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <img class="stikerTolak sembunyi" src="./bear-hug.webp"/>
                 <p class="teksTolak sembunyi">I wanna give you a big hug 🥰</p>
 
-                <img class="stikerTolak sembunyi" src="./cubit.gif"/>
+                <img class="stikerTolak sembunyi" src="./bubu-dudu-sseeyall.webp"/>
                 <p class="teksTolak sembunyi">Flowers for you 🌸 to say I'm sorry 🌸</p>
 
                 <img class="stikerTolak sembunyi" src="./cubit.gif"/>
@@ -286,10 +286,10 @@
                 <img class="stikerTolak sembunyi" src="./weee.gif"/>
                 <p class="teksTolak sembunyi">You're hot my love 🫣 pls for give me </p>
 
-                <img class="stikerTolak sembunyi" src="./cubit.gif"/>
+                <img class="stikerTolak sembunyi" src="./Bubu Dudu Cooking.gif"/>
                 <p class="teksTolak sembunyi">I promise, no more mistakes like this 💖</p>
 
-                <img class="stikerTolak sembunyi" src="./weee.gif"/>
+                <img class="stikerTolak sembunyi" src="./cilukba.gif"/>
                 <p class="teksTolak sembunyi">Pretty please, press 'not any more' for me? 🥹</p>
 
             </div>
